2012-02-04 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c (on_initialize_gtk_toplevel_class_handler):
	Always dump Gtk hierarchy in maintainer mode.

	* src/nact/nact-assistant-export.c (format_tree_view_initialize_gtk):
	* src/nact/nact-main-window.c (on_base_initialize_gtk):
	* src/nact/nact-tree-view.c (nact_tree_view_new): Updated accordingly.

	* src/nact/nact-icommand-tab.c (on_base_initialize_gtk):
	Dynamically converts GtkTable to GtkGrid.

	* src/nact/base-gtk-utils.c:
	* src/nact/base-gtk-utils.h (base_gtk_utils_table_to_grid): New function.

	* src/core/na-gtk-utils.c (na_gtk_utils_find_widget_by_name):
	Also search inside of unnamed widgets.

2012-02-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-xml/Makefile.am:
	* src/io-xml/naxml-formats.c: Data files are installed in a private
	subdirectory.

	* src/io-desktop/Makefile.am:
	* src/io-desktop/nadp-formats.c: Datafiles are installed in a private
	subdirectory.

	* src/nact/nact-menubar.c (on_open_context_menu): Manages if event is
	NULL.

	* src/nact/nact-tree-view.c: Manages to open the context menu with
	keyboard.

	* src/core/na-iprefs.c: Fix enumeration maps as it only works for data
	greater than zero.

	* src/nact/nact-main-tab.c: No more try to open a popup menu on the
	notebook as the standard GtkNotebook already has its own popup.

	* src/nact/nact-main-window.c (on_base_initialize_gtk):
	Enable the standard GtkNotebook context menu.

	* src/nact/nact-menubar-priv.h:
	* src/nact/nact-menubar.c:
	Define a new notebook action group.
	Define new radio action entries.

	* src/nact/nact-menubar-view.c (nact_menubar_view_on_tabs_pos_changed):
	New function.

	* src/nact/nautilus-actions-config-tool.actions: Define menu actions.

2012-02-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h: New MAIN_SIGNAL_CONTEXT_MENU signal.

	* src/nact/nact-marshal.def: New closure definition.

	* src/nact/nact-tree-view.c: