@@ -1,3 +1,8 @@
+2012-02-06 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/base-gtk-utils.c (base_gtk_utils_table_to_grid):
+	Only tries to dump children in maintainer mode.
+
 2012-02-04 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/base-window.c (on_initialize_gtk_toplevel_class_handler):
